fix(finances): two column layout breakpoint
- content quote layout on mobile
- add picture preset for content images
- fix reflow on video load
- move video styles into show css to make use of show color theme

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -115,16 +115,16 @@
 
   blockquote.image {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: repeat(2, auto);
     column-gap: var(--_content--column-gap);
-    row-gap: 0;
-
-    picture { grid-area: 1 / 1 / 3 / 2; }
+    row-gap: var(--_content--row-gap);
 
     img {
       border-radius: 20px;
       box-shadow: 10px -10px 0px 0px var(--_content--accent--color1), -10px 10px 0px 0px var(--_content--accent--color2);
+    }
+
+    @media (min-width: 768px) {
+      grid-template-columns: 1fr 2fr;
     }
   }
 }
