--- a/_sass/_finances.scss
+++ b/_sass/_finances.scss
@@ -12,7 +12,7 @@
    */
   $gap: 4rem;
   $columns: 2;
-  $min-width: 500px;
+  $min-width: 600px;
 
   /**
    * Calculated values.
