--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -138,10 +138,3 @@ blockquote {
   font-size: .875rem;
   font-weight: bold;
 }
-
-video {
-  width: 100%    !important;
-  height: auto   !important;
-  border-radius: 20px;
-  box-shadow: 0 5px 0px 0px $yellow;
-}
